--- a/AfterSchoolClasses.html
+++ b/AfterSchoolClasses.html
@@ -4,22 +4,150 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.16/dist/vue.js"></script>
+    <script src="products.js"></script>
 </head>
 <body>
     <div id="app">
         <header>
-            <h1>{{ sitename }}</h1>
-        </header>
+            <nav>
+                <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                    <!-- Left side: Home and Contact Us -->
+                    <div style="display: flex; gap: 1em;">
+                        <button v-on:click="showHome">Home</button>
+                        <button v-on:click="showContact">Contact Us</button>
+                    </div>
+                    
+                    <!-- Right side: Checkout button -->
+                    <button id="checkout_button" v-on:click="showCheckout">
+                        {{ cartItemCount }}
+                        <i class="fas fa-cart-plus"></i> Checkout
+                    </button>
+                </div>
+            </nav>
+        </header>        
         <main>
-            <p>Welcome to Shopping Website</p>
+            <div v-if="showProduct">
+                <div v-for="product in sortedProducts" class="product-box">
+                    <figure>
+                        <img v-bind:src="product.image">
+                    </figure>
+                    <section>
+                        <h2 v-text="product.title"></h2>
+                        <p v-html="product.description"></p>
+                        <p v-if="availableStock(product) > 0">In stock: {{ availableStock(product) }}</p>
+                        <p v-else style="color: red;">Out of stock</p>
+                        <p>Price: {{ product.price }}</p>
+                        <button v-on:click="addToCart(product)" v-if="canAddToCart(product)">
+                            Add to cart
+                        </button>
+                        <button disabled v-else>
+                            Out of Stock
+                        </button>
+                        <div>
+                            <span v-for="n in product.rating">★</span>
+                            <span v-for="n in 5 - product.rating">☆</span>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <div v-else>
+                <h2>Checkout</h2>
+                <p id="firstName"><strong>First Name:</strong><input v-model.trim="order.firstName"></p>
+                <p id="lastName"><strong>Last Name:</strong><input v-model.trim="order.lastName"></p>
+                <p id="address"><strong>Address:</strong><input v-model.trim="order.address"></p>
+                <p id="city"><strong>City:</strong><input v-model.trim="order.city"></p>
+                <p id="state">
+                    <strong>State:</strong>
+                    <select v-model="order.state">
+                        <option disabled value="">State</option>
+                        <option v-for="(state, key) in states" v-bind:value="key">
+                            {{ state }}
+                        </option>
+                    </select>
+                </p>
+                <p id="zip"><strong>Zip/Postal Code:</strong><input v-model.number="order.zip" type="number"></p>
+                <p id="gift"><input type="checkbox" v-model="order.gift">
+                    <label for="gift">Ship as Gift</label>
+                </p>
+                <p id="home"><input type="radio" value="Home" v-model="order.method">
+                    <label for="home">Home</label>
+                </p>
+                <p id="business"><input type="radio" value="Business" v-model="order.method">
+                    <label for="business">Business</label>
+                </p>
+                <div id="orderInfoDiv">
+                    <h2>Order Information</h2>
+                    <p>First Name: {{ order.firstName }}</p>
+                    <p>Last Name: {{ order.lastName }}</p>
+                    <p>Address: {{ order.address }}</p>
+                    <p>City: {{ order.city }}</p>
+                    <p>Zip: {{ order.zip }}</p>
+                    <p>State: {{ order.state }}</p>
+                    <p>Gift: {{ order.gift }}</p>
+                    <p>Method: {{ order.method }}</p>
+                    <button id="submitButton" v-on:click="submitForm">Place Order</button>
+                </div>
+            </div>
         </main>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.16/dist/vue.js"></script>
-    <script>
-        new Vue({
+    <script type="text/javascript">
+        let webstore = new Vue({
             el: "#app",
             data: {
-                sitename: "Shopping Website"
+                sitename: "AFS Club",
+                products: products,
+                cart: [],
+                showProduct: true,
+                order: {
+                    firstName: "",
+                    lastName: "",
+                    address: "",
+                    city: "",
+                    state: "",
+                    zip: "",
+                    gift: false,
+                    method: "Home"
+                },
+                states: {
+                    AL: "Alabama",
+                    AR: "Arizona",
+                    CA: "California",
+                    NV: "Nevada"
+                }
+            },
+            methods: {
+                canAddToCart: function(product) {
+                    return this.availableStock(product) > this.cart.filter(id => id === product.id).length;
+                },
+                addToCart: function(product) {
+                    this.cart.push(product.id);
+                },
+                showCheckout: function() {
+                    this.showProduct = !this.showProduct;
+                },
+                submitForm: function() {
+                    alert('Order submitted!');
+                },
+                availableStock: function(product) {
+                    return product.availableInventory - this.cart.filter(id => id === product.id).length;
+                }
+            },
+            computed: {
+                cartItemCount: function() {
+                    return this.cart.length || "";
+                },
+                sortedProducts() {
+                    // the comparison function that defines the order
+                    function compare(a, b) {
+                        if (a.price > b.price) return 1;
+                        if (a.price < b.price) return -1;
+                        return 0;
+                    }
+                    // sort the 'products' array and return it
+                    return this.products.sort(compare);
+                }
             }
         });
     </script>
