--- a/AfterSchoolClasses.html
+++ b/AfterSchoolClasses.html
@@ -1,40 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Website</title>
+    <link rel="stylesheet" href="test.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.16/dist/vue.js"></script>
     <script src="products.js"></script>
 </head>
+
 <body>
     <div id="app">
         <header>
-            <nav>
-                <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
-                    <!-- Left side: Home and Contact Us -->
-                    <div style="display: flex; gap: 1em;">
-                        <button v-on:click="showHome">Home</button>
-                        <button v-on:click="showContact">Contact Us</button>
-                    </div>
-                    
-                    <!-- Right side: Checkout button -->
-                    <button id="checkout_button" v-on:click="showCheckout">
-                        {{ cartItemCount }}
-                        <i class="fas fa-cart-plus"></i> Checkout
-                    </button>
-                </div>
-            </nav>
-        </header>        
+            <h1 id="title" v-text="sitename"></h1>
+            <button id="checkout_button" v-on:click="showCheckout">
+                {{ cartItemCount }}
+                <i class="fas fa-cart-plus"></i> Checkout
+            </button>
+        </header>
         <main>
-            <div v-if="showProduct">
+            <div id="productsSection" v-if="showProduct">
                 <div v-for="product in sortedProducts" class="product-box">
                     <figure>
                         <img v-bind:src="product.image">
                     </figure>
                     <section>
-                        <h2 v-text="product.title"></h2>
+                        <h2 v-text="product.name"></h2>
                         <p v-html="product.description"></p>
                         <p v-if="availableStock(product) > 0">In stock: {{ availableStock(product) }}</p>
                         <p v-else style="color: red;">Out of stock</p>
@@ -54,39 +47,67 @@
             </div>
             <div v-else>
                 <h2>Checkout</h2>
-                <p id="firstName"><strong>First Name:</strong><input v-model.trim="order.firstName"></p>
-                <p id="lastName"><strong>Last Name:</strong><input v-model.trim="order.lastName"></p>
-                <p id="address"><strong>Address:</strong><input v-model.trim="order.address"></p>
-                <p id="city"><strong>City:</strong><input v-model.trim="order.city"></p>
-                <p id="state">
-                    <strong>State:</strong>
-                    <select v-model="order.state">
-                        <option disabled value="">State</option>
-                        <option v-for="(state, key) in states" v-bind:value="key">
-                            {{ state }}
-                        </option>
-                    </select>
-                </p>
-                <p id="zip"><strong>Zip/Postal Code:</strong><input v-model.number="order.zip" type="number"></p>
-                <p id="gift"><input type="checkbox" v-model="order.gift">
-                    <label for="gift">Ship as Gift</label>
-                </p>
-                <p id="home"><input type="radio" value="Home" v-model="order.method">
-                    <label for="home">Home</label>
-                </p>
-                <p id="business"><input type="radio" value="Business" v-model="order.method">
-                    <label for="business">Business</label>
-                </p>
+
+                <!-- Cart Items Section -->
+                <div v-if="cart.length > 0" class="cart-container">
+                    <h3>Cart Items</h3>
+                    <div v-for="item in cart" class="cart-item">
+                        <img :src="item.image" alt="Product Image" class="cart-image">
+                        <div class="cart-details">
+                            <p class="cart-title">{{ item.title }}</p>
+                            <p>Quantity: {{ item.quantity }}</p>
+                            <p>Price per item: {{ item.price }}</p>
+                            <p>Total: {{ item.price * item.quantity }}</p>
+                        </div>
+                        <button v-on:click="removeFromCart(item.id)" class="remove-button">Remove</button>
+                    </div>
+                </div>
+                <div v-else>
+                    <p>Your cart is empty.</p>
+                </div>
+
+                <!-- User Information and Order Summary -->
                 <div id="orderInfoDiv">
                     <h2>Order Information</h2>
-                    <p>First Name: {{ order.firstName }}</p>
-                    <p>Last Name: {{ order.lastName }}</p>
-                    <p>Address: {{ order.address }}</p>
-                    <p>City: {{ order.city }}</p>
-                    <p>Zip: {{ order.zip }}</p>
-                    <p>State: {{ order.state }}</p>
-                    <p>Gift: {{ order.gift }}</p>
-                    <p>Method: {{ order.method }}</p>
+                    <div class="form-group">
+                        <label>First Name:</label>
+                        <input v-model.trim="order.firstName" placeholder="First Name">
+                    </div>
+                    <div class="form-group">
+                        <label>Last Name:</label>
+                        <input v-model.trim="order.lastName" placeholder="Last Name">
+                    </div>
+                    <div class="form-group">
+                        <label>Address:</label>
+                        <input v-model.trim="order.address" placeholder="Street Address">
+                    </div>
+                    <div class="form-group">
+                        <label>City:</label>
+                        <input v-model.trim="order.city" placeholder="City">
+                    </div>
+                    <div class="form-group">
+                        <label>State:</label>
+                        <select v-model="order.state">
+                            <option disabled value="">Select State</option>
+                            <option v-for="(state, key) in states" v-bind:value="key">
+                                {{ state }}
+                            </option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Zip/Postal Code:</label>
+                        <input v-model.number="order.zip" type="number" placeholder="Zip Code">
+                    </div>
+                    <div class="form-group">
+                        <input type="checkbox" v-model="order.promotion">
+                        <label>Sign up for Promotion?</label>
+                    </div>
+                    <div class="form-group">
+                        <input type="radio" value="Home" v-model="order.method">
+                        <label>Home Delivery</label>
+                        <input type="radio" value="Business" v-model="order.method">
+                        <label>Business Delivery</label>
+                    </div>
                     <button id="submitButton" v-on:click="submitForm">Place Order</button>
                 </div>
             </div>
@@ -107,7 +128,7 @@
                     city: "",
                     state: "",
                     zip: "",
-                    gift: false,
+                    promotion: false,
                     method: "Home"
                 },
                 states: {
@@ -115,38 +136,64 @@
                     AR: "Arizona",
                     CA: "California",
                     NV: "Nevada"
-                }
+                },
+                sortAttribute: "price", // Default sorting attribute
+                sortOrder: "asc" // Default sorting order
             },
             methods: {
-                canAddToCart: function(product) {
-                    return this.availableStock(product) > this.cart.filter(id => id === product.id).length;
+                canAddToCart: function (product) {
+                    return this.availableStock(product) > (this.cart.find(item => item.id === product.id)?.quantity || 0);
                 },
-                addToCart: function(product) {
-                    this.cart.push(product.id);
+                addToCart: function (product) {
+                    let cartItem = this.cart.find(item => item.id === product.id);
+                    if (cartItem) {
+                        cartItem.quantity++;
+                    } else {
+                        this.cart.push({
+                            id: product.id,
+                            image: product.image,
+                            title: product.title,
+                            price: product.price,
+                            quantity: 1
+                        });
+                    }
                 },
-                showCheckout: function() {
+                removeFromCart: function (productId) {
+                    let index = this.cart.findIndex(item => item.id === productId);
+                    if (index !== -1) {
+                        this.cart.splice(index, 1);
+                    }
+                },
+                showCheckout: function () {
                     this.showProduct = !this.showProduct;
                 },
-                submitForm: function() {
+                submitForm: function () {
                     alert('Order submitted!');
                 },
-                availableStock: function(product) {
-                    return product.availableInventory - this.cart.filter(id => id === product.id).length;
+                availableStock: function (product) {
+                    return product.availableInventory - (this.cart.find(item => item.id === product.id)?.quantity || 0);
                 }
             },
             computed: {
-                cartItemCount: function() {
-                    return this.cart.length || "";
-                },
                 sortedProducts() {
-                    // the comparison function that defines the order
-                    function compare(a, b) {
-                        if (a.price > b.price) return 1;
-                        if (a.price < b.price) return -1;
+                    let sorted = [...this.products];
+                    sorted.sort((a, b) => {
+                        let valueA = a[this.sortAttribute];
+                        let valueB = b[this.sortAttribute];
+
+                        if (typeof valueA === "string") {
+                            valueA = valueA.toLowerCase();
+                            valueB = valueB.toLowerCase();
+                        }
+
+                        if (valueA > valueB) return this.sortOrder === "asc" ? 1 : -1;
+                        if (valueA < valueB) return this.sortOrder === "asc" ? -1 : 1;
                         return 0;
-                    }
-                    // sort the 'products' array and return it
-                    return this.products.sort(compare);
+                    });
+                    return sorted;
+                },
+                cartItemCount: function () {
+                    return this.cart.reduce((sum, item) => sum + item.quantity, 0);
                 }
             }
         });
